@@ -1,0 +1,3 @@
+Add description for binary packages: python3-dulwich
+Certainty: possible
+Fixed-Lintian-Tags: package-has-no-description
